matlab bs ho jaye aaj ye

--- a/Assignment 3/Assignment_3.ipynb
+++ b/Assignment 3/Assignment_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "((14251, 28, 28), (14251,))"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "array([7, 9], dtype=uint8)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,28 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def one_hot_encoding(Y):\n",
-    "    n_classes = len(np.unique(Y))\n",
-    "    targets = Y.reshape(-1)\n",
-    "    return np.eye(n_classes)[targets],n_classes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Y,n_classes = one_hot_encoding(Y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,16 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((11400, 784), (2851, 784), (11400, 2), (2851, 2))"
+       "((11400, 784), (2851, 784), (11400,), (2851,))"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +121,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one_hot_encoding(Y):\n",
+    "    n_classes = len(np.unique(Y))\n",
+    "    Y=Y.reshape(1,Y.shape[0])\n",
+    "    Y_new = np.eye(n_classes)[Y.astype('int32')]\n",
+    "    Y_new = Y_new.T.reshape(n_classes, Y.shape[1])\n",
+    "    return Y_new,n_classes\n",
+    "#     targets = Y.reshape(-1)\n",
+    "#     return np.eye(n_classes)[targets]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_train,n_classes = one_hot_encoding(Y_train)\n",
+    "Y_test,n_classes=one_hot_encoding(Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((2, 11400), (2, 2851))"
+      ]
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_train.shape,Y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train=X_train.T\n",
+    "X_test=X_test.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((784, 11400), (784, 2851), (2, 11400), (2, 2851))"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape,X_test.shape,Y_train.shape,Y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,19 +220,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
     "def softmax(z,derative = False):\n",
     "    if derative:\n",
-    "        return \n",
+    "        return 1\n",
     "    return np.exp(z)/np.sum(np.exp(z),axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,27 +244,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
     "def init_weights(n_hidden_layers, number_of_neurons):\n",
-    "    weights_layers =[np.random.uniform(size=(X_train.shape[1],number_of_neurons[0]))]\n",
-    "    bias_layers = [np.random.uniform(size=(1,number_of_neurons[0]))]\n",
+    "    weights_layers =[np.random.uniform(size=(number_of_neurons[0],X_train.shape[0]))]\n",
+    "    bias_layers = [np.random.uniform(size=(number_of_neurons[0],1))]\n",
     "    \n",
     "    for i in range(1,n_hidden_layers):\n",
-    "        weights_layers.append(np.random.uniform(size=(weights_layers[i-1].shape[1],number_of_neurons[i])))\n",
-    "        bias_layers.append(np.random.uniform(size=(1,number_of_neurons[i])))\n",
+    "        weights_layers.append(np.random.uniform(size=(number_of_neurons[i],weights_layers[i-1].shape[0])))\n",
+    "        bias_layers.append(np.random.uniform(size=(number_of_neurons[i],1)))\n",
     "    \n",
-    "    weights_layers.append(np.random.uniform(size=(weights_layers[-1].shape[1],n_classes)))\n",
-    "    bias_layers.append(np.random.uniform(size=(1,n_classes)))\n",
+    "    weights_layers.append(np.random.uniform(size=(n_classes,weights_layers[-1].shape[0])))\n",
+    "    bias_layers.append(np.random.uniform(size=(n_classes,1)))\n",
     "    \n",
     "    return weights_layers,bias_layers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,16 +273,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(784, 100) (1, 100)\n",
-      "(100, 50) (1, 50)\n",
-      "(50, 2) (1, 2)\n"
+      "(100, 784) (100, 1)\n",
+      "(50, 100) (50, 1)\n",
+      "(2, 50) (2, 1)\n"
      ]
     }
    ],
@@ -238,41 +293,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_neural_network(X_train,Y_train,epoch,learning_rate):\n",
+    "def train_neural_network(X_train,Y_train,epoch,learning_rate,hidden_layer_activation=sigmoid):\n",
     "    global weight_layers\n",
     "    global bias_layers\n",
     "    \n",
     "    cost=[]\n",
+    "    number_of_samples = X_train.shape[1]\n",
     "    \n",
     "    #------epoch start here----------\n",
     "    \n",
-    "    layer_outputs = []\n",
-    "    last_layer_output = X_train\n",
-    "    \n",
-    "    \n",
-    "    for weight,bias in zip(weight_layers[:-1],bais_layers[:-1]):\n",
-    "        layer_outputs.append(sigmoid(np.dot(last_layer_output,weight)+bias))\n",
-    "        last_layer_output=layer_outputs[-1]\n",
+    "#     layer_outputs = []\n",
+    "#     layer_outputs_drev = []\n",
+    "#     delta_weights=[]\n",
+    "#     delta_bias=[]\n",
+    "#     last_layer_output = X_train\n",
     "\n",
-    "    layer_outputs.append(softmax(np.dot(last_layer_output,weight_layers[-1])+bias_layers[-1]))\n",
-    "    cost.append(compute_multiclass_loss(Y_train,layer_outputs[-1]))\n",
-    "    print(cost)"
+    "    last_layer_output = X_train\n",
+    "    input_layers = []\n",
+    "    output_layers=[]\n",
+    "    \n",
+    "    \n",
+    "    for weight,bais in zip(weight_layers[:-1],bais_layers[:-1]):\n",
+    "        input_layers.append(np.dot(weight,last_layer_output)+bais.T)\n",
+    "        output_layers.append(hidden_layer_activation(input_layers[-1]))\n",
+    "        last_layer_output=output_layers[-1]\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    input_layers.append(np.dot(weight_layers[-1],last_layer_output)+bias_layers[-1])\n",
+    "    output_layers.append(softmax(input_layers[-1]))\n",
+    "    \n",
+    "    print(len(input_layers),len(output_layers))\n",
+    "    print(output_layers[-1])\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "#         layer_outputs.append(hidden_layer_activation(np.dot(last_layer_output,weight)+bias))\n",
+    "#         layer_outputs_drev.append(hidden_layer_activation(np.dot(last_layer_output,weight)+bias,derative=True))\n",
+    "#         last_layer_output=layer_outputs[-1]\n",
+    "\n",
+    "#     layer_outputs.append(softmax(np.dot(last_layer_output,weight_layers[-1])+bias_layers[-1]))\n",
+    "    \n",
+    "#     cost.append(compute_multiclass_loss(Y_train,layer_outputs[-1]))\n",
+    "    \n",
+    "#     error = layer_outputs[-1] - Y_train\n",
+    "    \n",
+    "#     print(error.shape, layer_outputs[-2].shape)\n",
+    "#     delta_weights.insert(0,(1./number_of_samples)*np.dot(error.T,layer_outputs[-2]))\n",
+    "# #     delta_bias.insert(0,(1./number_of_samples)*np.sum(error,axis=1,keepdims=True))\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[53245.80121598119]\n"
+      "3 3\n",
+      "[[0.01206366 0.01206366 0.01206366 ... 0.01206366 0.01206366 0.01206366]\n",
+      " [0.98793634 0.98793634 0.98793634 ... 0.98793634 0.98793634 0.98793634]]\n"
      ]
     }
    ],
@@ -282,10 +370,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = [1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10,1,-1):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "code",
