seems like it works now

--- a/Assignment 3/Assignment_3.ipynb
+++ b/Assignment 3/Assignment_3.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,24 +312,43 @@
     "#     delta_bias=[]\n",
     "#     last_layer_output = X_train\n",
     "\n",
-    "    last_layer_output = X_train\n",
-    "    input_layers = []\n",
-    "    output_layers=[]\n",
+    "#     last_layer_output = X_train\n",
+    "    input_layers = [X_train]\n",
+    "    output_layers=[X_train]\n",
+    "    \n",
+    "    delta_weights = []\n",
+    "    delta_bais = []\n",
     "    \n",
     "    \n",
     "    for weight,bais in zip(weight_layers[:-1],bais_layers[:-1]):\n",
-    "        input_layers.append(np.dot(weight,last_layer_output)+bais.T)\n",
+    "        input_layers.append(np.dot(weight,output_layers[-1])+bais.T)\n",
     "        output_layers.append(hidden_layer_activation(input_layers[-1]))\n",
-    "        last_layer_output=output_layers[-1]\n",
     "    \n",
     "    \n",
     "    \n",
-    "    input_layers.append(np.dot(weight_layers[-1],last_layer_output)+bias_layers[-1])\n",
+    "    input_layers.append(np.dot(weight_layers[-1],output_layers[-1])+bias_layers[-1])\n",
     "    output_layers.append(softmax(input_layers[-1]))\n",
     "    \n",
-    "    print(len(input_layers),len(output_layers))\n",
-    "    print(output_layers[-1])\n",
+    "    cost.append(compute_multiclass_loss(Y_train,output_layers[-1]))\n",
+    "    print(cost)\n",
     "        \n",
+    "    #------Output layer error --------\n",
+    "    error = output_layers[-1] - Y_train\n",
+    "    \n",
+    "    delta_weights.append((1./number_of_samples)*np.dot(error,output_layers[-2].T))\n",
+    "    delta_bais.append((1./number_of_samples)*np.sum(error, axis=1, keepdims=True))\n",
+    "                      \n",
+    "    #-----hidden layer stuff\n",
+    "    \n",
+    "    for i in range(len(input_layers)-1)[::-1]:\n",
+    "        print(i)\n",
+    "        error = np.dot(weight_layers[i].T,error)\n",
+    "#         print(error.shape,hidden_layer_activation(input_layers[i],derative=True).shape)\n",
+    "        delta_z = error*hidden_layer_activation(input_layers[i],derative=True)\n",
+    "        delta_weights.insert(0,(1./m)*np.dot(delta_z,output_layers[i-1].T))\n",
+    "        delta_bais.insert(0,(1./m)*np.sum(error,axis=1,keepdims=True))\n",
+    "    \n",
+    "    print(len(delta_weights))\n",
     "        \n",
     "        \n",
     "        \n",
@@ -351,16 +370,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 3\n",
-      "[[0.01206366 0.01206366 0.01206366 ... 0.01206366 0.01206366 0.01206366]\n",
-      " [0.98793634 0.98793634 0.98793634 ... 0.98793634 0.98793634 0.98793634]]\n"
+      "[2.2662437633820476]\n",
+      "2\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-308-68638fcfa3e7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_neural_network\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mY_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-307-6930334fd2e2>\u001b[0m in \u001b[0;36mtrain_neural_network\u001b[0;34m(X_train, Y_train, epoch, learning_rate, hidden_layer_activation)\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_layers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m         \u001b[0merror\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweight_layers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0merror\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mhidden_layer_activation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_layers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mderative\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0mdelta_z\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0merror\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mhidden_layer_activation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_layers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mderative\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -379,27 +409,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
-      "9\n",
-      "8\n",
-      "7\n",
-      "6\n",
-      "5\n",
-      "4\n",
-      "3\n",
-      "2\n"
+      "2\n",
+      "1\n"
      ]
     }
    ],
    "source": [
-    "for i in range(10,1,-1):\n",
+    "for i in range(3)[:0:-1]:\n",
     "    print(i)"
    ]
   },
