first question done

--- a/Assignment 3/Assignment_3.ipynb
+++ b/Assignment 3/Assignment_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sn\n",
     "import pandas as pd\n",
+    "from sklearn.neural_network import MLPClassifier\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +49,7 @@
        "((14251, 28, 28), (14251,))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +87,7 @@
        "array([7, 9], dtype=uint8)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 317,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +126,7 @@
        "((11400, 784), (2851, 784), (11400,), (2851,))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +170,7 @@
        "((2, 11400), (2, 2851))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +200,7 @@
        "((784, 11400), (784, 2851), (2, 11400), (2, 2851))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1212,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 1 (i)(c)"
+    "## Part 1 (i)(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = h5py.File('data/Q1/MNIST_Subset.h5','r+')\n",
+    "X=data['X'][:]\n",
+    "Y=data['Y'][:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = X.reshape(X.shape[0],-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X=X/255"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#as we only have 2 classes\n",
+    "Y = np.where(Y==7,0,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train,X_test,Y_train,Y_test = train_test_split(X,Y,test_size=0.2, random_state=42)"
    ]
   },
   {
@@ -1219,6 +1268,148 @@
    "metadata": {},
    "source": [
     "### i) 1 hidden layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 337,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = MLPClassifier(activation='logistic', hidden_layer_sizes=(100,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 338,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MLPClassifier(activation='logistic', alpha=0.0001, batch_size='auto',\n",
+       "       beta_1=0.9, beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
+       "       hidden_layer_sizes=(100,), learning_rate='constant',\n",
+       "       learning_rate_init=0.001, max_iter=200, momentum=0.9,\n",
+       "       nesterovs_momentum=True, power_t=0.5, random_state=None,\n",
+       "       shuffle=True, solver='adam', tol=0.0001, validation_fraction=0.1,\n",
+       "       verbose=False, warm_start=False)"
+      ]
+     },
+     "execution_count": 338,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.fit(X_train,Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 339,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 340,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9898281304805332"
+      ]
+     },
+     "execution_count": 340,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(Y_test,pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ii) 3 hidden layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 341,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = MLPClassifier(activation='logistic', hidden_layer_sizes=(100,50,50,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 342,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MLPClassifier(activation='logistic', alpha=0.0001, batch_size='auto',\n",
+       "       beta_1=0.9, beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
+       "       hidden_layer_sizes=(100, 50, 50), learning_rate='constant',\n",
+       "       learning_rate_init=0.001, max_iter=200, momentum=0.9,\n",
+       "       nesterovs_momentum=True, power_t=0.5, random_state=None,\n",
+       "       shuffle=True, solver='adam', tol=0.0001, validation_fraction=0.1,\n",
+       "       verbose=False, warm_start=False)"
+      ]
+     },
+     "execution_count": 342,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.fit(X_train,Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 343,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 344,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9898281304805332"
+      ]
+     },
+     "execution_count": 344,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(Y_test,pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Accuracy is a lot better in this case compared to my model. Learning is actually happening in this case. Reasons in this case would be several, sklearn uses things like regularization, momentum and maybe a sigmoid for binary problems."
    ]
   },
   {
